[package]
edition = "2024"
name = "whostoblame"
readme = "README.md"
version = "0.1.0"

[dependencies]
git2 = { version = "0.20.4", default-features = false }
rayon = { version = "1.11.0", optional = true }
regex-lite = { version = "0.1.9" }

[features]
default = [
  "parallelization",
]
parallelization = [
  "dep:rayon",
]
